--- a/templates/bots/index.html
+++ b/templates/bots/index.html
@@ -5,8 +5,8 @@
     <div id="render-target"></div>
     {%  load static %}
     <!-- Dependencies -->
-    <script src="{% static "react.js" %}"></script>
-    <script src="{% static "react-dom.js" %}"></script>
+    <script src="{% static "react.production.min.js" %}"></script>
+    <script src="{% static "react-dom.production.min.js" %}"></script>
     <script src="{% static "jquery.js" %}"></script>
     <script src="{% static "moment.min.js" %}"></script>
     <script src="{% static "react-router.min.js" %}"></script>
